--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,44 @@
-# Generate a random secret: https://generate-secret.vercel.app/32 or `openssl rand -base64 32`
-AUTH_SECRET=****
+# ========================
+# 🌐 Database (REQUIRED)
+# ========================
+# Your PostgreSQL connection URL
+# Format: postgres://USER:PASSWORD@HOST:PORT/DATABASE
+POSTGRES_URL=postgres://username:password@host:5432/dbname
 
-# The following keys below are automatically created and
-# added to your environment when you deploy on vercel
+# ========================
+# 🔐 Security
+# ========================
+# JWT secret for signing tokens
+# Auto-generated if not set in Windsurf Deploy Script
+JWT_SECRET=your_jwt_secret_here
 
-# Get your xAI API Key here for chat and image models: https://console.x.ai/
-XAI_API_KEY=****
+# ========================
+# 💳 Stripe API Keys
+# ========================
+# Secret and public keys for Stripe payments
+# Auto-generated if not set in Windsurf Deploy Script
+STRIPE_SECRET_KEY=sk_test_your_secret_here
+STRIPE_PUBLIC_KEY=pk_test_your_public_here
 
-# Instructions to create a Vercel Blob Store here: https://vercel.com/docs/storage/vercel-blob
-BLOB_READ_WRITE_TOKEN=****
+# ========================
+# 🌍 App Settings
+# ========================
+# URL where your app will be hosted
+NEXT_PUBLIC_APP_URL=https://your-app-url.vercel.app
+NODE_ENV=production
 
-# Instructions to create a PostgreSQL database here: https://vercel.com/docs/storage/vercel-postgres/quickstart
-POSTGRES_URL=****
+# ========================
+# 📨 Email Settings (Optional)
+# ========================
+# If your app sends emails, fill these in
+SMTP_HOST=smtp.your-email-provider.com
+SMTP_PORT=587
+SMTP_USER=your_email_username
+SMTP_PASS=your_email_password
 
-
-# Instructions to create a Redis store here:
-# https://vercel.com/docs/redis
-REDIS_URL=****
+# ========================
+# 🔑 Optional 3rd Party Services
+# ========================
+# Example: Google OAuth
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
