--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,5 @@ SMTP_PASS=your_email_password
 # Example: Google OAuth
 GOOGLE_CLIENT_ID=your_google_client_id
 GOOGLE_CLIENT_SECRET=your_google_client_secret
+DATABASE_URL=postgresql://neondb_owner:npg_h2MGyPXO5FKk@ep-aged-paper-ad4rx5g4-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require
+DATABASE_URL_UNPOOLED=postgresql://neondb_owner:npg_h2MGyPXO5FKk@ep-aged-paper-ad4rx5g4.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require
